tests/compile_fail/debug/both_fmt_and_skip_on_field.stderr
error: only single kind of `#[debug(...)]` attribute is allowed here
 --> tests/compile_fail/debug/both_fmt_and_skip_on_field.rs:4:5
  |
4 |     #[debug(skip)]
  |     ^
